--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "tsc": "tsc",
+    "dev": "ts-node-dev index.ts",
+    "lint": "eslint --ext .ts .",
+    "start": "node build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +19,17 @@
   "bugs": {
     "url": "https://github.com/AbdullahHinnawi/helsinki-city-bike-app/issues"
   },
-  "homepage": "https://github.com/AbdullahHinnawi/helsinki-city-bike-app#readme"
+  "homepage": "https://github.com/AbdullahHinnawi/helsinki-city-bike-app#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^7.0.3",
+    "typescript": "^5.0.2"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "ts-node-dev": "^2.0.0"
+  }
 }
