--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "tsc": "tsc",
     "dev": "ts-node-dev index.ts",
+    "insert-data": "ts-node data.ts",
     "lint": "eslint --ext .ts .",
     "start": "node build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -24,6 +25,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "fast-csv": "^4.3.6",
     "mongoose": "^7.0.3",
     "typescript": "^5.0.2"
   },
