--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.18.2",
     "fast-csv": "^4.3.6",
     "mongoose": "^7.0.3",
+    "mongoose-paginate-v2": "^1.7.1",
     "typescript": "^5.0.2"
   },
   "devDependencies": {
