--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -17,13 +17,12 @@
       "@typescript-eslint/explicit-module-boundary-types": 0,
       "@typescript-eslint/no-unsafe-member-access": 0,
       "@typescript-eslint/linebreak-style": [0],
-      "@typescript-eslint/no-unused-vars": [
-          "error", { "argsIgnorePattern": "^_" }
-      ],
+      "@typescript-eslint/no-unused-vars": [0],
       "@typescript-eslint/no-explicit-any": 0,
       "@typescript-eslint/no-unsafe-assignment": 0,
       "@typescript-eslint/no-unsafe-return":0,
       "@typescript-eslint/no-unsafe-call":0,
+      "@typescript-eslint/no-unsafe-argument": [0],
       "no-case-declarations": 0,
       "react/prop-types": 0,
       "react/react-in-jsx-scope": 0,
