--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -25,16 +25,12 @@
       "@typescript-eslint/no-unsafe-argument": [0],
       "no-case-declarations": 0,
       "react/prop-types": 0,
+      "linebreak-style": 0,
+      "object-curly-spacing": 0,
+      "no-trailing-spaces": 0,
       "react/react-in-jsx-scope": 0,
       "no-restricted-imports": "off",
-      "@typescript-eslint/no-restricted-imports": [
-        "warn",
-        {
-          "name": "react-redux",
-          "importNames": ["useSelector", "useDispatch"],
-          "message": "Use typed hooks `useAppDispatch` and `useAppSelector` instead."
-        }
-      ]
+      "@typescript-eslint/no-restricted-imports": [0]
     },
     "settings": {
       "react": {
