--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -25,6 +25,7 @@
       "@typescript-eslint/no-unsafe-argument": [0],
       "no-case-declarations": 0,
       "react/prop-types": 0,
+      "indent": "off",
       "linebreak-style": 0,
       "object-curly-spacing": 0,
       "no-trailing-spaces": 0,
