--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "server": "cd ../ && npm run dev",
+    "fullstack": "concurrently \"npm run server\" \"npm start\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint './src/**/*.{ts,tsx}'",
