--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -11,7 +11,7 @@
       "es6": true
     },
     "rules": {
-      "@typescript-eslint/indent":[0],
+      "@typescript-eslint/indent":["error", 2],
       "@typescript-eslint/semi": [0],
       "@typescript-eslint/explicit-function-return-type": 0,
       "@typescript-eslint/explicit-module-boundary-types": 0,
