--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   },
   "homepage": "https://github.com/AbdullahHinnawi/helsinki-city-bike-app#readme",
   "dependencies": {
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "concurrently": "^8.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -34,6 +36,8 @@
     "mongoose": "^7.0.3",
     "mongoose-paginate-v2": "^1.7.1",
     "path": "^0.12.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.3",
     "typescript": "^5.0.2"
   },
   "devDependencies": {
